--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 *{
     font-family: 'Mulish', sans-serif;
     font-family: 'Work Sans', sans-serif;
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
 }
 .btn-praimary{
@@ -18,6 +18,10 @@
 .common-titel{
     font-size: 48px;
     font-weight: 800;
+}
+.common-dis{
+    font-size: 16px;
+    font-weight: 400;
 }
 /* nav style */
 nav{
@@ -114,6 +118,147 @@ select{
     height: 500px;
     width: 500px;
 }
+/* destination style */
+.Destination{
+    margin-top: 100px;
+}
+.destination-contant{
+    text-align: center;
+}
+
+ .destination-img{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin-top: 50px;
+    grid-template-rows: repeat(3 , 1fr);
+    gap: 20px;
+ } 
+ .destination-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
+
+.one{
+    grid-column: 1 /span 6;
+}
+.two{
+    grid-column: 7 /span 6;
+}
+
+.three{
+    grid-column: 1 /span 4;
+    grid-row: 2 /span 1;
+}
+.four{
+    grid-column: 5/span 4;
+}
+.five{
+    grid-column: 9/span 4;
+}
+.six{
+    grid-column: 1/span 5;
+}
+.seven{
+    grid-column: 6/ span 7;
+}
+/* video-container */
+.video-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+.video-container h3{
+    margin-bottom: 50px;
+    text-decoration: underline;
+}
+/* why-chose style */
+.why-chose{
+    margin-top: 100px;
+}
+.why-chose-head{
+    text-align: center;
+}
+
+.why-chose-main{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+   gap: 20px;
+   margin-top: 50px;
+}
+.main-card-1 , .main-card-2 , .main-card-3{
+    width: 500px;
+    padding: 50px;
+    
+}
+.main-card-1{
+    background-color: antiquewhite;
+    border-radius: 10px;
+}
+.main-card-2{
+    background-color: aliceblue;
+    border-radius: 10px;
+}
+.main-card-3{
+    /* margin-left: 600px; */
+    background-color: antiquewhite;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+.hotel{
+    font-size: 44px;
+    color: rgb(212, 18, 44);
+}
+.location{
+    font-size: 44px;
+    color: blueviolet;
+}
+.mony{
+    font-size: 44px;
+    color: rgb(0, 0, 0);
+}
+.chose-main-titel{
+    font-size: 24px;
+    font-weight: 800;
+}
+/* deals style */
+.deals-head{
+    text-align: center;
+}
+.main-head{
+    display: flex;
+    gap: 10px;
+}
+.sentmartin , .max ,.clock{
+    font-size: 16px;
+    font-weight: 400;
+}
+.deals-main-contant-1{
+    text-align: left;
+    margin-left: 600px;
+   margin-top: 400px;
+    /* width: 500px; */
+    color: black;
+    /* padding-top: 70px; */
+    border-radius: 16px;
+border: 2px solid #FFF;
+background: rgba(255, 255, 255, 0.80);
+backdrop-filter: blur(2.5px);
+}
+.deals-main-1{
+    background-image: url(../Images/Group\ 39.png);
+    background-size: cover;
+    height: 500px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -121,7 +266,7 @@ select{
 @media screen and (max-width:600px) {
     *{
         max-width: 100%;
-        margin: 0;
+        margin: 0 auto;
     }
     
     nav{
@@ -160,4 +305,9 @@ select{
    .common-titel{
     font-size: 20px;
    }
+   .destination-img{
+   display: flex;
+   flex-direction: column;
+   }
+
 }
