--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ nav{
     align-items: center;
     margin-top: 50px;
 }
-.aloplane{
+.aroplane{
     color: rgb(155, 65, 239);
 }
 .nav-titel{
@@ -40,6 +40,7 @@ nav{
     font-size: 36px;
     font-weight: 800;
 }
+
 nav ul{
     display: flex;
     gap: 40px;
@@ -223,34 +224,86 @@ select{
     font-size: 24px;
     font-weight: 800;
 }
-/* deals style */
-.deals-head{
-    text-align: center;
-}
-.main-head{
+
+
+
+/* perfect-place */
+.perfect-place{
     display: flex;
-    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 100px;
 }
-.sentmartin , .max ,.clock{
-    font-size: 16px;
-    font-weight: 400;
+.perfect-contant{
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
-.deals-main-contant-1{
-    text-align: left;
-    margin-left: 600px;
-   margin-top: 400px;
-    /* width: 500px; */
-    color: black;
-    /* padding-top: 70px; */
-    border-radius: 16px;
-border: 2px solid #FFF;
-background: rgba(255, 255, 255, 0.80);
-backdrop-filter: blur(2.5px);
+.perfect-contant button{
+    margin-top: 30px;
 }
-.deals-main-1{
-    background-image: url(../Images/Group\ 39.png);
-    background-size: cover;
-    height: 500px;
+
+.perfect-video video{
+    width: 500px;
+    
+}
+/* discount style */
+.discount{
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 00px;
+}
+.discount-form{
+    width: 500px;
+    height: 300px;
+    border: 1px solid violet;
+    border-radius: 10px;
+    padding: 40px;
+}
+.discount-titel{
+    font-size: 24px;
+    font-weight: 800;
+}
+.discount-form input{
+    width: 300px;
+    padding: 15px;
+    border-radius: 5px;
+    border: 0;
+    background-color: aliceblue;
+}
+.Subscribe{
+    width: 330px;
+    padding: 15px;
+    
+    color: white;
+    background-color: blueviolet;
+    font-size: 20px;
+    font-weight: 800;
+    border: 0;
+    height: 50px;
+    border-radius: 5px;
+
+}
+.discount-img{
+    margin-top: 100px;
+    margin-left: 100px;
+}
+.img-btn{
+    color: white;
+    font-size: 40px;
+    font-weight: 800;
+    background-color: blueviolet;
+    padding: 20px;
+    border-radius: 10px;
+     position: relative;
+    bottom: 150px;
+    left: 200px; 
+    transform: rotate(-20deg);
+   
+
 }
 
 
@@ -274,7 +327,11 @@ backdrop-filter: blur(2.5px);
     }
     nav ul{
         gap: 10px;
+        
     }
+   
+    
+   
     .banner{
         width: 300px;
         height: 100%;
@@ -297,6 +354,9 @@ backdrop-filter: blur(2.5px);
         align-items: center;
 
     }
+    .popular-img{
+        margin-top: 50px;
+    }
     .popular-img img{
   
         height: 100%;
@@ -309,5 +369,44 @@ backdrop-filter: blur(2.5px);
    display: flex;
    flex-direction: column;
    }
+   .video-container{
+    width: 70%;
+   }
+   .why-chose-main{
+    grid-template-columns: 1fr;
+    /* width: 200px; */
+   }
+   .main-card-1 , .main-card-2 , .main-card-3{
+    width: 200px;
+    padding: 10px;
+    
+}
+.perfect-place{
+    flex-direction: column;
+    padding: 10px;
+}
+.perfect-video{
+    margin-top: 20px;
+}
+.discount{
+    flex-direction: column;
+     gap: 10px;
+     margin-left: 10px;
+     /* margin-right: 100px; */
+}
+.discount-img{
+    margin-left: 10px;
+}
+.discount-form{
+    width: 300px;
+}
+.img-btn{
+    /* visibility: hidden; */
+    left: 100px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 10px;
+
+}
 
 }
