--- a/style/style.css
+++ b/style/style.css
@@ -305,6 +305,39 @@ select{
    
 
 }
+/* footer */
+footer{
+    background: rgba(19, 19, 24, 0.05);
+    padding: 200px;
+}
+.foot-titel{
+    display:flex;
+    gap: 10px;
+    /* text-align: center; */
+    color: blueviolet;
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 20px;
+
+}
+.foot-dis{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.foot-icons{
+    font-size: 24px;
+    text-align: center;
+}
+hr{
+    width: 600px;
+    margin-top: 100px;
+}
+.foot-date{
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 50px;
+}
 
 
 
@@ -407,6 +440,9 @@ select{
     font-weight: 600;
     padding: 10px;
 
+}
+footer{
+    padding: 20px;
 }
 
 }
